@@ -55,7 +55,7 @@ public class ErrorResponse {
                                             error.getField(),
                                             error.getRejectedValue() == null ? "" : error.getRejectedValue().toString(),
                                             error.getDefaultMessage()))
-                    .collect(Collectors.toList());
+                    .toList();
         }
     }
 }
